--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+.custom-list {
+  list-style: none;
+  padding-left: 20px;
+}
+
+.custom-list li::before {
+  content: "🐾"; 
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  margin-right: 10px;
+}
